--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.6.8",
@@ -24,9 +25,11 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^4.0.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-vector-icons": "^8.1.0",
