--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-dialogflow": "^3.1.0",
     "react-native-elements": "^3.4.2",
+    "react-native-fullwidth-image": "^0.1.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.4",
